; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/fusion/extr_mptsas.c_mptsas_ublock_io_starget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/fusion/extr_mptsas.c_mptsas_ublock_io_starget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_target = type { i32 }

@mptsas_ublock_io_sdev = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scsi_target*)* @mptsas_ublock_io_starget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mptsas_ublock_io_starget(%struct.scsi_target* %0) #0 {
  %2 = alloca %struct.scsi_target*, align 8
  store %struct.scsi_target* %0, %struct.scsi_target** %2, align 8
  %3 = load %struct.scsi_target*, %struct.scsi_target** %2, align 8
  %4 = icmp ne %struct.scsi_target* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.scsi_target*, %struct.scsi_target** %2, align 8
  %7 = load i32, i32* @mptsas_ublock_io_sdev, align 4
  %8 = call i32 @starget_for_each_device(%struct.scsi_target* %6, i32* null, i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @starget_for_each_device(%struct.scsi_target*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
